--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -14,15 +14,15 @@
 
 
 
-;domain hmv.smat HTTPS, dev
+;domain hmv.smat HTTPS, dev DEMO PWA CM ISSEMYM HMVSOLUCIONES
 
-server=p3plcpnl0750.prod.phx3.secureserver.net
+;server=p3plcpnl0750.prod.phx3.secureserver.net
 
-username =usr_issemym
+;username =usr_issemym
 
-password =123456789
+;password =123456789
 
-dbname =cm_issemym_development2
+;dbname =cm_issemym_development2
 
 
 
@@ -30,13 +30,13 @@ dbname =cm_issemym_development2
 
 ;DEV local
 
-;server=localhost
+server=localhost
 
-;username =root
+username =root
 
-;password =
+password =
 
-;dbname =cm_issemym_development
+dbname =php_monolitic_skeleton
 
 
 
